# django-seq-repro

./: .gitignore  pyproject.toml
content/: models.py  tests.py
content/migrations/: 0001_initial.py  0002_content_is_readonly.py
repro/: asgi.py  settings.py  urls.py  wsgi.py
