[tool.poetry]
name = "django-seq-repro"
version = "0.1.0"
description = ""
authors = ["Kevin Renskers <kevin@loopwerk.io>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
